--- a/website/newsletter/215/index.mdx
+++ b/website/newsletter/215/index.mdx
@@ -1,6 +1,6 @@
 ---
 slug: /215
-title: "This Week In React #215: Dropdown, i18n, Next.js, Remix, Astro, shadcn, Forgive, Fancy Components, Expo, Static Hermes, Skia, ExecuTorch, Kotlin, Node, Shortest, Rolldown, Rspack, pnpm..."
+title: "This Week In React #215: Dropdown, i18n, Next.js, Remix, Astro, shadcn, Fancy Components, Expo, Static Hermes, Skia, ExecuTorch, Kotlin, Node, Shortest, Rolldown, Rspack, pnpm..."
 authors: [slorber]
 date: 01-02-2025
 unlisted: true
@@ -8,7 +8,13 @@ unlisted: true
 
 Hi everyone!
 
-<Todo />
+please share the newsletter
+
+happy new year
+
+results
+
+milestone https://x.com/sebastienlorber/status/1874596608735891791
 
 <!-- truncate -->
 
@@ -53,7 +59,7 @@ This article shows how you can use ts-morph AST transformations to automatically
 ---
 
 - 💸 [React Native Zero to Hero - Learn everything you need to ship your first app](https://galaxies.dev/missions/zero-to-hero?utm_source=thisweekinreact)
-- 👀 [React PR \- “Forgive” IDE extension](https://github.com/facebook/react/pull/31918): The React Compiler team recently [hinted at React Summit](https://www.youtube.com/watch?v=C8Mg-NSyqWg&t=14452s) their intent to create a “React IDE” powered by the compiler, not limited to just linting but also providing educational tooltips and more. Well, there's nothing very interesting to see yet, but work has begun on scaffolding a Language Server Protocol and VSCode extension, driven by a new [reactrc config file](https://github.com/facebook/react/pull/31916).
+- 👀 [React PR \- “Forgive” IDE extension](https://github.com/facebook/react/pull/31918): The React Compiler team recently [hinted at React Summit](https://www.youtube.com/watch?v=C8Mg-NSyqWg&t=14452s) their intent to create a “React IDE” powered by the compiler, not limited to just linting but also providing educational tooltips and more. Well, there's nothing very interesting to see yet, but work has begun on scaffolding a Language Server Protocol and VSCode extension.
 - 📜 [Building the Black Friday-Cyber Monday live dashboard](https://vercel.com/blog/building-the-black-friday-cyber-monday-live-dashboard): Vercel presents the technical architecture behind their Next.js-based Black Friday dashboard
 - 📜 [Replacing Legacy throw in React 19 with Suspense and use](https://peterkellner.net/2024/12/31/replacing-legacy-throw-in-react-19-with-suspense-and-use/): There’s a new `use()` hook, but throwing promises still works.
 - 📜 [Remix Security Checklist](https://blog.arcjet.com/remix-security-checklist/)
@@ -112,7 +118,7 @@ To get 2025 off to a good start, let's recap all the great things Expo offered u
 - 💸 [Demos \- 90+ React Native animations crafted with Reanimated, Gesture Handler, and Skia, by Reactiive](https://reactiive.io/demos?utm_source=thisweekinreact)
 - 👀 [RN Skia PR \- macOS support](https://github.com/Shopify/react-native-skia/pull/2836)
 - 📊 [State of React Native](https://stateofreactnative.com/): Last week to answer the annual community survey\!
-- 📜 [Static Hermes Update, Dec 2024](https://x.com/tmikov/status/1869945330638442651): Static Hermes is expected to roll out in 2025, initially opt-in, then enabled by default. It can compile and execute both typed and untyped code. Benchmarks show it’s already significantly faster on untyped code, particularly with JIT mode and when Hermes can infer some types. No benchmark was provided for typed code, but I guess it should be much faster\!
+- 📜 [Static Hermes Update, Dec 2024](https://x.com/tmikov/status/1869945330638442651): Static Hermes is expected to roll out in 2025, initially opt-in, then enabled by default. It can compile and execute both typed and untyped code. Benchmarks show it’s already significantly faster on untyped code, particularly with JIT mode when Hermes can infer types. No benchmark was provided for typed code, but we can expect it to much faster\! The improved ES compliance will also permit to remove heavy Babel plugins. TLDR: in 2025 you can expect a great speed increase of both build and runtime.
 - 📜 [How to create beautiful glowing components on React Native 0.76+](https://www.devas.life/how-to-create-beautiful-glowing-components-on-react-native-0-76/): box-shadow support and New Architecture unlock new creative possibilities.
 - 📜 [From Native to Multiplatform Development: Unpacking Kotlin and Compose](https://www.callstack.com/blog/from-native-to-multiplatform-development-unpacking-kotlin-and-compose): Explains the Android Kotlin ecosystem from the perspective of a React Native dev.
 - 📜 [Why Expo is a great fit for new and existing React Native apps](https://expo.dev/blog/why-expo-is-a-great-fit-for-new-and-existing-react-native-apps)
@@ -144,7 +150,7 @@ To get 2025 off to a good start, let's recap all the great things Expo offered u
 
 ## 🤭 Fun {#fun}
 
-[![alt](/emails/issues/215/meme.jpg)](https://x.com/sebastienlorber/status/1874767983354253464)
+[![alt](/emails/issues/215/meme.jpg)](https://bsky.app/profile/brandonroberts.dev/post/3ld74oultjc2g)
 
 [![alt](/emails/issues/215/meme2.jpg)](https://x.com/flydotio/status/1873840239166226548)
 
