--- a/website/newsletter/215/index.mdx
+++ b/website/newsletter/215/index.mdx
@@ -21,9 +21,11 @@ In 2024 the newsletter went from being a sustainable project to a break-even bus
 - 💰 **Income**: 47k€ ➡️ 99k€ ARR - We are getting good as sales, and have successfully convinced most companies we wanted to work with to sponsor us.
 - 💸 **Charges**: 15k€ ➡️ 36k€ - We have increased our charges significantly this year by onboarding guest newsletter writers (14k€). The other charges are ads (12k€), SaaS (7k€) and virtual assistants (3k€).
 
-Overall I think it has been a great 2024 year, looking forward to a promising future. I didn't reach my goal of 50k subscribers, but I'm not too far. And I still reached another important symbolic milestone: having more newsletter subscribers than Twitter followers, and becoming less dependent of social platforms.
+Overall I think it has been a great 2024 year, looking forward to a promising future. I didn't reach my ambitious goal of 50k subscribers, but I'm not too far. After the summer, it became more challenging to grow, not sure why. I still reached another important symbolic milestone: having more newsletter subscribers than Twitter followers, becoming less dependent of social platforms.
 
 In 2025, I'd like the newsletter to be more than just a list of curation emails. I plan to onboard guest writers, paying them to produce a series of articles on topics they are passionate about. If you think you'd be a great fit, reply and say hi! 👋
+
+If you'd like to help me realise my plans, please share the newsletter with a friend or colleague who might enjoy it, or on any social platform.
 
 <!-- truncate -->
 
