--- a/website/newsletter/215/index.mdx
+++ b/website/newsletter/215/index.mdx
@@ -25,7 +25,7 @@ Overall I think it has been a great 2024 year, looking forward to a promising fu
 
 In 2025, I'd like the newsletter to be more than just a list of curation emails. I plan to onboard guest writers, paying them to produce a series of articles on topics they are passionate about. If you think you'd be a great fit, reply and say hi! 👋
 
-If you'd like to help me realise my plans, please share the newsletter with a friend or colleague who might enjoy it, or on any social platform.
+If you'd like to help me realize my plans, please share the newsletter with a friend or colleague who might enjoy it, or on any social platform.
 
 <!-- truncate -->
 
