--- a/website/newsletter/215/index.mdx
+++ b/website/newsletter/215/index.mdx
@@ -132,7 +132,7 @@ To get 2025 off to a good start, let's recap all the great things Expo offered u
 - 💸 [Demos \- 90+ React Native animations crafted with Reanimated, Gesture Handler, and Skia, by Reactiive](https://reactiive.io/demos?utm_source=thisweekinreact)
 - 👀 [RN Skia PR \- macOS support](https://github.com/Shopify/react-native-skia/pull/2836)
 - 📊 [State of React Native](https://stateofreactnative.com/): Last week to answer the annual community survey\!
-- 📜 [Static Hermes Update, Dec 2024](https://x.com/tmikov/status/1869945330638442651): Static Hermes is expected to roll out in 2025, initially opt-in, then enabled by default. It can compile and execute both typed and untyped code. Benchmarks show it’s already significantly faster on untyped code, particularly with JIT mode when Hermes can infer types. No benchmark was provided for typed code, but we can expect it to much faster\! The improved ES compliance will also permit to remove heavy Babel plugins. TLDR: in 2025 you can expect a great speed increase of both build and runtime.
+- 📜 [Static Hermes Update, Dec 2024](https://x.com/tmikov/status/1869945330638442651): Static Hermes is expected to roll out in 2025, initially opt-in, then enabled by default. It can compile and execute both typed and untyped code. Benchmarks show it’s already significantly faster on untyped code, particularly with JIT mode when Hermes can infer types. No benchmark was provided for typed code, but we can expect it to be much faster\! The improved ES compliance will also permit to remove heavy Babel plugins. TLDR: in 2025 you can expect a great speed increase of both build and runtime.
 - 📜 [How to create beautiful glowing components on React Native 0.76+](https://www.devas.life/how-to-create-beautiful-glowing-components-on-react-native-0-76/): box-shadow support and New Architecture unlock new creative possibilities.
 - 📜 [From Native to Multiplatform Development: Unpacking Kotlin and Compose](https://www.callstack.com/blog/from-native-to-multiplatform-development-unpacking-kotlin-and-compose): Explains the Android Kotlin ecosystem from the perspective of a React Native dev.
 - 📜 [The Time for React Native is Now](https://galaxies.dev/article/time-for-react-native)
