--- a/website/newsletter/216/index.mdx
+++ b/website/newsletter/216/index.mdx
@@ -1,14 +1,18 @@
 ---
 slug: /216
-title: "This Week In React #216: ..."
-authors: [slorber]
+title: "This Week In React #216: Recoil, View transitions, Next.Js, RSC, A11y testing, React Compiler, Nitro Modules, Radon IDE, SQLite, RN edge-to-edge, htmx, Node, pnpm..."
+authors: [matthieugicquel, cyrilbo]
 date: 01-08-2025
 unlisted: true
 ---
 
 Hi everyone!
 
-<Todo />
+Cyril and Matthieu from Theodo Apps here 👋, standing in for Seb to bring you the latest news from React and React Native!
+
+The previous edition was last Friday, so this one will be a bit shorter than usual. We’re resuming the usual pace of one newsletter every week after the holidays.
+
+The [2024 edition of JS rising stars](https://risingstars.js.org/2024/en) is out, you can start by having a look at which libraries performed well on this flawed but still useful metric of GitHub starts. Spoiler: `shadcn/ui` gained the most stars (again).
 
 🗓️ [Paris TypeScript La Conf'](https://la-conf.typescript.paris/?utm_source=thisweekinreact) - 🇫🇷 Paris - 28 February - Full speaker line up just dropped! Join Mateusz Burzyński, Elise Patrikainen and David Rousset! Get 20% off tickets with code "TWIR"!
 
@@ -26,31 +30,39 @@ import Support from "../_support.mdx";
 
 **[PropelAuth: Make Authentication Your Advantage](https://www.propelauth.com/?utm_source=newsletter&utm_campaign=twinrjan82024)**
 
-If your authentication isn't **helping you grow**, it's **holding you back**.  
-  
+If your authentication isn't **helping you grow**, it's **holding you back**.
+
 With [PropelAuth](https://www.propelauth.com/?utm_source=newsletter&utm_campaign=twinrjan82024), you get everything you need to launch and scale your B2B product:
 
 *   **Easy to understand** [documentation](https://docs.propelauth.com/?utm_source=newsletter&utm_campaign=twinrjan82024) and **friendly, fast support**.
-    
-*   **UIs that cover all your use cases** - signup, login, MFA, organization management and more.
-    
-*   **User impersonation** so you can provide top-notch support to your users.
-    
-*   **Enterprise SAML/SSO** and **advanced security features** so you can be upmarket-ready.
-    
-*   **User insights** to help you strategize and expand.  
-    
 
-[Get started today  
-](https://www.propelauth.com/?utm_source=newsletter&utm_campaign=twinrjan82024)
+*   **UIs that cover all your use cases** - signup, login, MFA, organization management and more.
+
+*   **User impersonation** so you can provide top-notch support to your users.
+
+*   **Enterprise SAML/SSO** and **advanced security features** so you can be upmarket-ready.
+
+*   **User insights** to help you strategize and expand.
+
+
+[Get started today](https://www.propelauth.com/?utm_source=newsletter&utm_campaign=twinrjan82024)
 
 ---
 
 ## ⚛️ React {#react}
 
-<Todo />
+- 🐦 [Recoil (state manager by meta) has been archived](https://x.com/dai_shi/status/1875910305802514649)
+- 👀 [React is adding support for View transitions](https://github.com/facebook/react/pull/31975) with a `<ViewTransition />` component that integrates with all the async features like Suspense and  `startTransition`.
+- 📜 [Composable Caching with Next.js](https://nextjs.org/blog/composable-caching): Explains what Next.js is trying to accomplish, and why `”use cache”` is a compiler directive and not a function (to be able to analyze closures and determine the right cache key).
+- 📜 [RSC and Server Action Bundle Practice](https://github.com/orgs/web-infra-dev/discussions/23): For bundler authors or devs who want a deep dive on how RSCs work.
+- 📜 [Automated Accessibility Testing at Slack](https://slack.engineering/automated-accessibility-testing-at-slack/): They tried to do it with testing-library but ended up using playwright.
+- 📜 [Thoughts on State Management Libraries in the React Compiler Era](https://blog.axlight.com/posts/thoughts-on-state-management-libraries-in-the-react-compiler-era/): The compiler makes React Context much more attractive, are they still useful?
+- 📜 [All kinds of state management in React](https://www.typeonce.dev/article/all-kinds-of-state-management-in-react): url state, server state, client state…
+- 📦 [Docusaurus 3.7](https://docusaurus.io/blog/releases/3.7) adds support for React 19 and a new svgr plugin.
+- 📦 [React Admin 5.4 (and 5.3)](https://marmelab.com/blog/2025/01/08/react-admin-january-2025-update.html)
+- 🎙️ [Syntax.fm - 2025 Web Development Predictions](https://syntax.fm/show/866/2025-web-development-predictions)
 
-- 💸[daily.dev:  Your personal dev news feed. Free! ](https://daily.dev/w/this-week-in-react)
+- 💸 [daily.dev:  Your personal dev news feed. Free! ](https://daily.dev/w/this-week-in-react)
 
 <SubscribeFormEmbed placement="middle" />
 
@@ -67,15 +79,15 @@ Reactile is an UI/UX turnkey framework which features an out-of-the-box, intuiti
 On top of that, Reactile also offers:
 
 *   A promise-based persistence mechanism which permits a uniform workflow across time and on multiple devices.
-    
+
 *   The possibility to use nested tabs for your tiles.
-    
+
 *   A simplified global search mechanism.
-    
+
 *   CSS @container based responsiveness.
-    
+
 *   And much more.
-    
+
 
 Version 2 coming out soon. Get started with your unique 30-day free trial. Learn more about it on reactile.net.
 
@@ -86,7 +98,14 @@ Version 2 coming out soon. Get started with your unique 30-day free trial. Learn
 
 ## 📱 React-Native {#react-native}
 
-<Todo />
+- 🐦 [Nitro Views will be released along with React Native 0.78](https://x.com/mrousavy/status/1876559810784833930)
+- 🐦 [Network debugging tools will land in Radon IDE](https://x.com/kzzzf/status/1875211071231025353)
+- 📖 [You can highlight live re-renders in React Native DevTools](https://reactnative.dev/docs/react-native-devtools#react-components)
+- 📜 [Modern SQLite for React Native apps - DrizzleORM with expo-sqlite setup, type-safe queries, live queries, migrations, Drizzle Studio Expo Dev Tool Plugin.](https://expo.dev/blog/modern-sqlite-for-react-native-apps)
+- 📦 [React Native v0.77.0-rc.6:](https://github.com/facebook/react-native/releases/tag/v0.77.0-rc.6) the stable release should be scheduled for next week.
+- 📦 [React Native Edge to Edge v1.2:](https://github.com/zoontek/react-native-edge-to-edge/releases/tag/1.2.0) add support for light theme variants on android.
+- 🎥 [React Universe On Air #45 - Evan Bacon on Universal React Native Apps, DOM & React Server Components](https://www.youtube.com/watch?v=rA7E3rGKSZw)
+
 
 - 💸 [PostHog - How to set up React Native session replay](https://dub.link/twir-jan8)
 
@@ -94,14 +113,20 @@ Version 2 coming out soon. Get started with your unique 30-day free trial. Learn
 
 ## 🔀 Other {#other}
 
-<Todo />
+- 📜 [The future of htmx](https://htmx.org/essays/future/): (almost) no new features
+- 📜 [Relatively New Things You Should Know about HTML Heading Into 2025](https://frontendmasters.com/blog/bone-up-html-2025/)
+- 📜 [Testing Accessibility with Screen Readers](https://www.epicweb.dev/testing-accessibility-with-screen-readers)
+- 📜 [Balancing Text In CSS](https://ishadeed.com/article/balancing-text-css/)
+- 📜 [Using Forced Reflows, the Event Loop, and the Repaint Cycle to Slide Open a Box](https://macarthur.me/posts/box/)
+- 📜 [Node’s new built-in support for TypeScript](https://2ality.com/2025/01/nodejs-strip-type.html)
+- 📦 [Node v23.6](https://nodejs.org/en/blog/release/v23.6.0) with TS types stripping and [Node v22.13 (LTS)](https://nodejs.org/en/blog/release/v22.13.0)
+- 📦 [Pnpm v10](https://github.com/pnpm/pnpm/releases/tag/v10.0.0)
+- 📦 [Prisma v6.2](https://github.com/prisma/prisma/releases/tag/6.2.0)
 
 ---
 
 ## 🤭 Fun {#fun}
 
-<Todo />
-
-[![alt](/emails/issues/215/meme.jpg)](https://twitter.com/TODOTODOTODOTODOTODOTODOTODOTODOTODOTODO)
+[![alt](/emails/issues/216/meme.jpg)](https://x.com/jordwalke/status/1875336115009573268)
 
 See ya! 👋
