--- a/website/newsletter/216/index.mdx
+++ b/website/newsletter/216/index.mdx
@@ -12,9 +12,9 @@ Cyril and Matthieu from Theodo Apps here 👋, standing in for Seb to bring you 
 
 The previous edition was last Friday, so this one will be a bit shorter than usual. We’re resuming the usual pace of one newsletter every week after the holidays.
 
-The [2024 edition of JS rising stars](https://risingstars.js.org/2024/en) is out, you can start by having a look at which libraries performed well on this flawed but still useful metric of GitHub starts. Spoiler: `shadcn/ui` gained the most stars (again).
+The [2024 edition of JS rising stars](https://risingstars.js.org/2024/en) is out, you can start by having a look at which libraries performed well on this flawed but still useful metric of GitHub starts. Spoiler: `shadcn/ui` gained the most stars (again). Sébastien commented the [Tooling section](https://risingstars.js.org/2024/en#section-build).
 
-🗓️ [Paris TypeScript La Conf'](https://la-conf.typescript.paris/?utm_source=thisweekinreact) - 🇫🇷 Paris - 28 February - Full speaker line up just dropped! Join Mateusz Burzyński, Elise Patrikainen and David Rousset! Get 20% off tickets with code "TWIR"!
+Make sure to check our partner 🗓️ [Paris TypeScript La Conf'](https://la-conf.typescript.paris/?utm_source=thisweekinreact) - 🇫🇷 Paris - 28 February - Full speaker line up just dropped! Join Mateusz Burzyński, Elise Patrikainen and David Rousset! Get 20% off tickets with code "TWIR"!
 
 <!-- truncate -->
 
@@ -34,16 +34,15 @@ If your authentication isn't **helping you grow**, it's **holding you back**.
 
 With [PropelAuth](https://www.propelauth.com/?utm_source=newsletter&utm_campaign=twinrjan82024), you get everything you need to launch and scale your B2B product:
 
-*   **Easy to understand** [documentation](https://docs.propelauth.com/?utm_source=newsletter&utm_campaign=twinrjan82024) and **friendly, fast support**.
+- **Easy to understand** [documentation](https://docs.propelauth.com/?utm_source=newsletter&utm_campaign=twinrjan82024) and **friendly, fast support**.
 
-*   **UIs that cover all your use cases** - signup, login, MFA, organization management and more.
+- **UIs that cover all your use cases** - signup, login, MFA, organization management and more.
 
-*   **User impersonation** so you can provide top-notch support to your users.
+- **User impersonation** so you can provide top-notch support to your users.
 
-*   **Enterprise SAML/SSO** and **advanced security features** so you can be upmarket-ready.
+- **Enterprise SAML/SSO** and **advanced security features** so you can be upmarket-ready.
 
-*   **User insights** to help you strategize and expand.
-
+- **User insights** to help you strategize and expand.
 
 [Get started today](https://www.propelauth.com/?utm_source=newsletter&utm_campaign=twinrjan82024)
 
@@ -52,7 +51,7 @@ With [PropelAuth](https://www.propelauth.com/?utm_source=newsletter&utm_campaign
 ## ⚛️ React {#react}
 
 - 🐦 [Recoil (state manager by meta) has been archived](https://x.com/dai_shi/status/1875910305802514649)
-- 👀 [React is adding support for View transitions](https://github.com/facebook/react/pull/31975) with a `<ViewTransition />` component that integrates with all the async features like Suspense and  `startTransition`.
+- 👀 [React is adding support for View transitions](https://github.com/facebook/react/pull/31975) with a `<ViewTransition />` component that integrates with all the async features like Suspense and `startTransition`.
 - 📜 [Composable Caching with Next.js](https://nextjs.org/blog/composable-caching): Explains what Next.js is trying to accomplish, and why `”use cache”` is a compiler directive and not a function (to be able to analyze closures and determine the right cache key).
 - 📜 [RSC and Server Action Bundle Practice](https://github.com/orgs/web-infra-dev/discussions/23): For bundler authors or devs who want a deep dive on how RSCs work.
 - 📜 [Automated Accessibility Testing at Slack](https://slack.engineering/automated-accessibility-testing-at-slack/): They tried to do it with testing-library but ended up using playwright.
@@ -61,7 +60,7 @@ With [PropelAuth](https://www.propelauth.com/?utm_source=newsletter&utm_campaign
 - 📦 [Docusaurus 3.7](https://docusaurus.io/blog/releases/3.7) adds support for React 19 and a new svgr plugin.
 - 📦 [React Admin 5.4 (and 5.3)](https://marmelab.com/blog/2025/01/08/react-admin-january-2025-update.html)
 - 🎙️ [Syntax.fm - 2025 Web Development Predictions](https://syntax.fm/show/866/2025-web-development-predictions)
-- 💸 [daily.dev:  Your personal dev news feed. Free! ](https://daily.dev/w/this-week-in-react)
+- 💸 [daily.dev: Your personal dev news feed. Free! ](https://daily.dev/w/this-week-in-react)
 
 <SubscribeFormEmbed placement="middle" />
 
@@ -77,21 +76,19 @@ Reactile is an UI/UX turnkey framework which features an out-of-the-box, intuiti
 
 On top of that, Reactile also offers:
 
-*   A promise-based persistence mechanism which permits a uniform workflow across time and on multiple devices.
+- A promise-based persistence mechanism which permits a uniform workflow across time and on multiple devices.
 
-*   The possibility to use nested tabs for your tiles.
+- The possibility to use nested tabs for your tiles.
 
-*   A simplified global search mechanism.
+- A simplified global search mechanism.
 
-*   CSS @container based responsiveness.
+- CSS @container based responsiveness.
 
-*   And much more.
-
+- And much more.
 
 Version 2 coming out soon. Get started with your unique 30-day free trial. Learn more about it on reactile.net.
 
 [Reactile - The new React UI management system](https://www.reactile.net/price?utm_source=ThisweekinReact)
-
 
 ---
 
