--- a/website/newsletter/216/index.mdx
+++ b/website/newsletter/216/index.mdx
@@ -91,8 +91,8 @@ Version 2 coming out soon. Get started with your unique 30-day free trial. Learn
 - 🐦 [Network debugging tools will land in Radon IDE](https://x.com/kzzzf/status/1875211071231025353)
 - 📖 [You can highlight live re-renders in React Native DevTools](https://reactnative.dev/docs/react-native-devtools#react-components)
 - 📜 [Modern SQLite for React Native apps - DrizzleORM with expo-sqlite setup, type-safe queries, live queries, migrations, Drizzle Studio Expo Dev Tool Plugin.](https://expo.dev/blog/modern-sqlite-for-react-native-apps)
-- 📦 [React Native v0.77.0-rc.6:](https://github.com/facebook/react-native/releases/tag/v0.77.0-rc.6) the stable release should be scheduled for next week.
-- 📦 [React Native Edge to Edge v1.2:](https://github.com/zoontek/react-native-edge-to-edge/releases/tag/1.2.0) add support for light theme variants on android.
+- 📦 [React Native 0.77.0-rc.6:](https://github.com/facebook/react-native/releases/tag/v0.77.0-rc.6) is the golden RC and a stable release is scheduled for next week.
+- 📦 [React Native Edge to Edge 1.2:](https://github.com/zoontek/react-native-edge-to-edge/releases/tag/1.2.0) add support for light theme variants on android.
 - 🎥 [React Universe On Air #45 - Evan Bacon on Universal React Native Apps, DOM & React Server Components](https://www.youtube.com/watch?v=rA7E3rGKSZw)
 
 ---
@@ -105,9 +105,9 @@ Version 2 coming out soon. Get started with your unique 30-day free trial. Learn
 - 📜 [Balancing Text In CSS](https://ishadeed.com/article/balancing-text-css/)
 - 📜 [Using Forced Reflows, the Event Loop, and the Repaint Cycle to Slide Open a Box](https://macarthur.me/posts/box/)
 - 📜 [Node’s new built-in support for TypeScript](https://2ality.com/2025/01/nodejs-strip-type.html)
-- 📦 [Node v23.6](https://nodejs.org/en/blog/release/v23.6.0) with TS types stripping and [Node v22.13 (LTS)](https://nodejs.org/en/blog/release/v22.13.0)
-- 📦 [Pnpm v10](https://github.com/pnpm/pnpm/releases/tag/v10.0.0)
-- 📦 [Prisma v6.2](https://github.com/prisma/prisma/releases/tag/6.2.0)
+- 📦 [Node 23.6](https://nodejs.org/en/blog/release/v23.6.0) with TS types stripping and [Node 22.13 (LTS)](https://nodejs.org/en/blog/release/v22.13.0)
+- 📦 [pnpm 10.0 - Increased security, `onlyBuiltDependencies`](https://github.com/pnpm/pnpm/releases/tag/v10.0.0)
+- 📦 [Prisma 6.2](https://github.com/prisma/prisma/releases/tag/6.2.0)
 
 ---
 
