--- a/website/newsletter/216/index.mdx
+++ b/website/newsletter/216/index.mdx
@@ -50,12 +50,18 @@ With [PropelAuth](https://www.propelauth.com/?utm_source=newsletter&utm_campaign
 - 🐦 [Recoil (state manager by meta) has been archived](https://x.com/dai_shi/status/1875910305802514649)
 - 👀 [React is adding support for View transitions](https://github.com/facebook/react/pull/31975) with a `<ViewTransition />` component that integrates with all the async features like Suspense and `startTransition`.
 - 📜 [Composable Caching with Next.js](https://nextjs.org/blog/composable-caching): Explains what Next.js is trying to accomplish, and why `”use cache”` is a compiler directive and not a function (to be able to analyze closures and determine the right cache key).
-- 📜 [RSC and Server Action Bundle Practice](https://github.com/orgs/web-infra-dev/discussions/23): For bundler authors or devs who want a deep dive on how RSCs work.
+- 📜 [RSC and Server Action Bundle Practice](https://github.com/orgs/web-infra-dev/discussions/23): An Rspack maintainer shared a comprehensive deep dive on how bundlers implement React Server Components in practice, notably webpack and Turbopack.
 - 📜 [Automated Accessibility Testing at Slack](https://slack.engineering/automated-accessibility-testing-at-slack/): They tried to do it with testing-library but ended up using playwright.
 - 📜 [Thoughts on State Management Libraries in the React Compiler Era](https://blog.axlight.com/posts/thoughts-on-state-management-libraries-in-the-react-compiler-era/): The compiler makes React Context much more attractive, are they still useful?
 - 📜 [All kinds of state management in React](https://www.typeonce.dev/article/all-kinds-of-state-management-in-react): url state, server state, client state…
+- 📜 [How React's Render, Effects and Refs work under the hood](https://tigerabrodi.blog/how-reacts-render-effects-and-refs-work-under-the-hood)
+- 📜 [Redux Saga Is Hard Until You Look Under The Hood](https://janhesters.com/blog/redux-saga-is-hard-until-you-look-under-the-hood)
+- 📦 [Bippy \- A toolkit to hack into react internals](https://www.bippy.dev/): It’s what [react-scan](https://github.com/aidenybai/react-scan) uses under the hood to access the Fiber tree.
 - 📦 [Docusaurus 3.7](https://docusaurus.io/blog/releases/3.7) adds support for React 19 and a new svgr plugin.
 - 📦 [React Admin 5.4 (and 5.3)](https://marmelab.com/blog/2025/01/08/react-admin-january-2025-update.html)
+- 🎥 [Cosden \- The Biggest Mistake Intermediate React Developers Make](https://www.youtube.com/watch?v=jqcbIgQBn34)
+- 🎥 [Alem Tuzlak \- The Benefits of React Router V7 Nobody Told You About](https://www.youtube.com/watch?v=EGuYKL8puRI)
+- 🎥 [Theo \- Inertia 2.0: It's like Next but better (and you can use React\!)](https://www.youtube.com/watch?v=OpXLWJd2iO0)
 - 🎙️ [Syntax.fm - 2025 Web Development Predictions](https://syntax.fm/show/866/2025-web-development-predictions)
 
 <SubscribeFormEmbed placement="middle" />
@@ -91,9 +97,9 @@ Version 2 coming out soon. Get started with your unique 30-day free trial. Learn
 - 🐦 [Network debugging tools will land in Radon IDE](https://x.com/kzzzf/status/1875211071231025353)
 - 📖 [You can highlight live re-renders in React Native DevTools](https://reactnative.dev/docs/react-native-devtools#react-components)
 - 📜 [Modern SQLite for React Native apps - DrizzleORM with expo-sqlite setup, type-safe queries, live queries, migrations, Drizzle Studio Expo Dev Tool Plugin.](https://expo.dev/blog/modern-sqlite-for-react-native-apps)
-- 📦 [React Native 0.77.0-rc.6:](https://github.com/facebook/react-native/releases/tag/v0.77.0-rc.6) is the golden RC and a stable release is scheduled for next week.
-- 📦 [React Native Edge to Edge 1.2:](https://github.com/zoontek/react-native-edge-to-edge/releases/tag/1.2.0) add support for light theme variants on android.
-- 🎥 [React Universe On Air #45 - Evan Bacon on Universal React Native Apps, DOM & React Server Components](https://www.youtube.com/watch?v=rA7E3rGKSZw)
+- 📦 [React Native 0.77.0-rc.6](https://github.com/facebook/react-native/releases/tag/v0.77.0-rc.6) is the golden RC and a stable release is scheduled for next week.
+- 📦 [React Native Edge to Edge 1.2](https://github.com/zoontek/react-native-edge-to-edge/releases/tag/1.2.0) adds support for light theme variants on android.
+- 🎥 [React Universe On Air 45 - Evan Bacon on Universal React Native Apps, DOM & React Server Components](https://www.youtube.com/watch?v=rA7E3rGKSZw)
 
 ---
 
@@ -105,7 +111,7 @@ Version 2 coming out soon. Get started with your unique 30-day free trial. Learn
 - 📜 [Balancing Text In CSS](https://ishadeed.com/article/balancing-text-css/)
 - 📜 [Using Forced Reflows, the Event Loop, and the Repaint Cycle to Slide Open a Box](https://macarthur.me/posts/box/)
 - 📜 [Node’s new built-in support for TypeScript](https://2ality.com/2025/01/nodejs-strip-type.html)
-- 📦 [Node 23.6](https://nodejs.org/en/blog/release/v23.6.0) with TS types stripping and [Node 22.13 (LTS)](https://nodejs.org/en/blog/release/v22.13.0)
+- 📦 [Node 23.6](https://nodejs.org/en/blog/release/v23.6.0) with TS types stripping, and [Node 22.13 (LTS)](https://nodejs.org/en/blog/release/v22.13.0) with stable security model.
 - 📦 [pnpm 10.0 - Increased security, `onlyBuiltDependencies`](https://github.com/pnpm/pnpm/releases/tag/v10.0.0)
 - 📦 [Prisma 6.2](https://github.com/prisma/prisma/releases/tag/6.2.0)
 
