--- a/website/newsletter/216/index.mdx
+++ b/website/newsletter/216/index.mdx
@@ -113,7 +113,7 @@ Version 2 coming out soon. Get started with your unique 30-day free trial. Learn
 - 📜 [Node’s new built-in support for TypeScript](https://2ality.com/2025/01/nodejs-strip-type.html)
 - 📦 [Node 23.6](https://nodejs.org/en/blog/release/v23.6.0) with TS types stripping, and [Node 22.13 (LTS)](https://nodejs.org/en/blog/release/v22.13.0) with stable security model.
 - 📦 [pnpm 10.0 - Increased security, `onlyBuiltDependencies`](https://github.com/pnpm/pnpm/releases/tag/v10.0.0)
-- 📦 [Prisma 6.2](https://github.com/prisma/prisma/releases/tag/6.2.0)
+- 📦 [Prisma 6.2 - omit, SQLite json/enum fields](https://github.com/prisma/prisma/releases/tag/6.2.0)
 
 ---
 
