--- a/website/newsletter/216/index.mdx
+++ b/website/newsletter/216/index.mdx
@@ -1,6 +1,6 @@
 ---
 slug: /216
-title: "This Week In React #216: Next.js, View Transitions, RSC, Compiler, React Router, Recoil, Bippy, Docusaurus, A11y, Nitro, Radon IDE, SQLite, Edge-to-Edge, Node, TypeScript, pnpm, htmx..."
+title: "This Week In React #216: Next.js, ViewTransition, RSC, Compiler, React Router, Recoil, Bippy, Docusaurus, A11y, Nitro, Radon IDE, SQLite, Edge-to-Edge, Node, TypeScript, pnpm, htmx..."
 authors: [matthieugicquel, cyrilbo]
 date: 01-08-2025
 unlisted: true
