--- a/website/newsletter/216/index.mdx
+++ b/website/newsletter/216/index.mdx
@@ -120,6 +120,7 @@ Version 2 coming out soon. Get started with your unique 30-day free trial. Learn
 
 ## 🔀 Other {#other}
 
+- 📜 [JavaScript Frameworks - Heading into 2025](https://dev.to/this-is-learning/javascript-frameworks-heading-into-2025-hkb)
 - 📜 [The future of htmx](https://htmx.org/essays/future/): (almost) no new features
 - 📜 [Relatively New Things You Should Know about HTML Heading Into 2025](https://frontendmasters.com/blog/bone-up-html-2025/)
 - 📜 [Testing Accessibility with Screen Readers](https://www.epicweb.dev/testing-accessibility-with-screen-readers)
