--- a/website/newsletter/216/index.mdx
+++ b/website/newsletter/216/index.mdx
@@ -1,6 +1,6 @@
 ---
 slug: /216
-title: "This Week In React #216: Next.js, ViewTransition, RSC, Compiler, React Router, Recoil, Bippy, Docusaurus, A11y, Nitro, Radon IDE, SQLite, Edge-to-Edge, Node, TypeScript, pnpm, htmx..."
+title: "This Week In React #216: Next.js, ViewTransition, RSC, Compiler, React Router, Recoil, Bippy, Docusaurus, A11y, Static Hermes, Nitro, Radon, SQLite, Edge-to-Edge, Node, TypeScript, pnpm, htmx..."
 authors: [matthieugicquel, cyrilbo]
 date: 01-08-2025
 ---
@@ -109,6 +109,7 @@ Version 2 coming out soon. Get started with your unique 30-day free trial. Learn
 - 💸 [PostHog - How to set up React Native session replay](https://dub.link/twir-jan8)
 - 🐦 [Nitro Views will be released along with React Native 0.78](https://x.com/mrousavy/status/1876559810784833930)
 - 🐦 [Network debugging tools will land in Radon IDE](https://x.com/kzzzf/status/1875211071231025353)
+- 👀 [React Native PR - Static Hermes for React Native](https://github.com/facebook/react-native/pull/48531): The integration of the new Hermes implementation has started! The initial benchmarks shows a great 30%+ perf improvement, but it's not even using typed code or JIT yet, which should give even more significant numbers.
 - 📖 [You can highlight live re-renders in React Native DevTools](https://reactnative.dev/docs/react-native-devtools#react-components)
 - 📜 [Modern SQLite for React Native apps - DrizzleORM with expo-sqlite setup, type-safe queries, live queries, migrations, Drizzle Studio Expo Dev Tool Plugin.](https://expo.dev/blog/modern-sqlite-for-react-native-apps)
 - 📦 [React Native 0.77.0-rc.6](https://github.com/facebook/react-native/releases/tag/v0.77.0-rc.6) is the golden RC and a stable release is scheduled for next week.
